<resources>
    <string name="app_name">Proyect</string>
    <string name="action_log_in">Iniciar sesión</string>
    <string name="action_sing_in">Suscríbete</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="nombre">Nombre de Usuario</string>
    <string name="apellidos">Apellidos</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="textologin">Iniciar sesión</string>
    <string name="textosingin">Registrarse</string>
    <string name="seleccionar_tipo">Seleccionar tipo</string>


</resources>