<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454545"
    tools:context=".registro">


    <Button
        android:id="@+id/singin"
        android:layout_width="359dp"
        android:layout_height="55dp"
        android:backgroundTint="#006064"
        android:text="@string/action_sing_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.376" />

    <EditText
        android:id="@+id/name"
        android:layout_width="359dp"
        android:layout_height="77dp"
        android:layout_marginTop="63dp"
        android:backgroundTint="#006064"
        android:hint="@string/nombre"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#F6F5F5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/username"
        android:layout_width="359dp"
        android:layout_height="77dp"
        android:layout_marginTop="63dp"
        android:backgroundTint="#006064"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="#F6F5F5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="359dp"
        android:layout_height="77dp"
        android:layout_marginTop="63dp"
        android:backgroundTint="#006064"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/editTextTextPersonName"
        android:layout_width="262dp"
        android:layout_height="83dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:text="@string/textosingin"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>